force-app/main/default/objects/Client_Acceptance_Form__c/Client_Acceptance_Form__c.object-meta.xml
<CustomObject>
    <label>Business Risk Assessment Form</label>
    <nameField>
        <displayFormat>BRA-{0000}</displayFormat>
        <label>Business Risk Assessment Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Risk Assessment Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>