force-app/main/default/objects/Client_Acceptance_Form__c/fields/advisorypartnerdate__c.field-meta.xml
<CustomField>
    <fullName>advisorypartnerdate__c</fullName>
    <label>Advisory Partner Date Approved</label>
    <type>Date</type>
</CustomField>