force-app/main/default/objects/Client_Acceptance_Form__c/fields/advisorypartnername__c.field-meta.xml
<CustomField>
    <fullName>advisorypartnername__c</fullName>
    <label>Advisory Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>