force-app/main/default/objects/Client_Acceptance_Form__c/fields/Are_any_of_the_individuals__c.field-meta.xml
<CustomField>
    <fullName>Are_any_of_the_individuals__c</fullName>
    <label>Are any of the individuals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>