force-app/main/default/objects/Client_Acceptance_Form__c/fields/Are_there_any_other_significant__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_other_significant__c</fullName>
    <label>Are there any other significant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>