force-app/main/default/objects/Client_Acceptance_Form__c/fields/Are_we_anticipating_that_as__c.field-meta.xml
<CustomField>
    <fullName>Are_we_anticipating_that_as__c</fullName>
    <label>Are we anticipating that as</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>