force-app/main/default/objects/Client_Acceptance_Form__c/fields/Are_we_involved_in_a_dispute__c.field-meta.xml
<CustomField>
    <fullName>Are_we_involved_in_a_dispute__c</fullName>
    <label>Are we involved in a dispute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>