force-app/main/default/objects/Client_Acceptance_Form__c/fields/Assignment_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Manager__c</fullName>
    <label>Assignment Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>