force-app/main/default/objects/Client_Acceptance_Form__c/fields/Audit_RI__c.field-meta.xml
<CustomField>
    <fullName>Audit_RI__c</fullName>
    <label>Audit RI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>