force-app/main/default/objects/Client_Acceptance_Form__c/fields/auditpartnerdate__c.field-meta.xml
<CustomField>
    <fullName>auditpartnerdate__c</fullName>
    <label>Audit Partner Date Approved</label>
    <type>Date</type>
</CustomField>