force-app/main/default/objects/Client_Acceptance_Form__c/fields/auditpartnername__c.field-meta.xml
<CustomField>
    <fullName>auditpartnername__c</fullName>
    <label>Audit Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>