force-app/main/default/objects/Client_Acceptance_Form__c/fields/BACKGROUNDTOASSIGNMENT__c.field-meta.xml
<CustomField>
    <fullName>BACKGROUNDTOASSIGNMENT__c</fullName>
    <label>BACKGROUNDTOASSIGNMENT</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>