force-app/main/default/objects/Client_Acceptance_Form__c/fields/Bank_loans__c.field-meta.xml
<CustomField>
    <fullName>Bank_loans__c</fullName>
    <label>(Bank loans)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>