force-app/main/default/objects/Client_Acceptance_Form__c/fields/Base_contingent__c.field-meta.xml
<CustomField>
    <fullName>Base_contingent__c</fullName>
    <label>Base contingent</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>