force-app/main/default/objects/Client_Acceptance_Form__c/fields/Basis_of_Beneficial_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_Beneficial_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basis of Beneficial Ownership</label>
    <type>Checkbox</type>
</CustomField>