force-app/main/default/objects/Client_Acceptance_Form__c/fields/ben1__c.field-meta.xml
<CustomField>
    <fullName>ben1__c</fullName>
    <description>Identification  comments (including summary of why individuals have been chosen for identity verification):</description>
    <inlineHelpText>Identification comments (including summary of why individuals have been chosen for identity verification):</inlineHelpText>
    <label>Identification comments (including summa</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>