force-app/main/default/objects/Client_Acceptance_Form__c/fields/Can_the_regulated_activity__c.field-meta.xml
<CustomField>
    <fullName>Can_the_regulated_activity__c</fullName>
    <label>Can the regulated activity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>