force-app/main/default/objects/Client_Acceptance_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Client Acceptance Forms</relationshipLabel>
    <relationshipName>Client_Acceptance_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>