force-app/main/default/objects/Client_Acceptance_Form__c/fields/Cash_in_hand_overdrafts__c.field-meta.xml
<CustomField>
    <fullName>Cash_in_hand_overdrafts__c</fullName>
    <label>Cash in hand / (overdrafts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>