force-app/main/default/objects/Client_Acceptance_Form__c/fields/Client_Group__c.field-meta.xml
<CustomField>
    <fullName>Client_Group__c</fullName>
    <label>Client Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>