force-app/main/default/objects/Client_Acceptance_Form__c/fields/Co_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Co_Reg_No__c</fullName>
    <label>Co. Reg. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>