force-app/main/default/objects/Client_Acceptance_Form__c/fields/Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Name__c</fullName>
    <label>Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>