force-app/main/default/objects/Client_Acceptance_Form__c/fields/Comment_on_value_aspirations__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_value_aspirations__c</fullName>
    <label>Comment on value aspirations</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>