force-app/main/default/objects/Client_Acceptance_Form__c/fields/Company_Activities__c.field-meta.xml
<CustomField>
    <fullName>Company_Activities__c</fullName>
    <label>Company Activities</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>