force-app/main/default/objects/Client_Acceptance_Form__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>BRA Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>