force-app/main/default/objects/Client_Acceptance_Form__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>BRA Completed Date</label>
    <type>Date</type>
</CustomField>