force-app/main/default/objects/Client_Acceptance_Form__c/fields/con1__c.field-meta.xml
<CustomField>
    <fullName>con1__c</fullName>
    <description>ADDITIONAL COMMENTS:</description>
    <label>ADDITIONAL COMMENTS:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>