force-app/main/default/objects/Client_Acceptance_Form__c/fields/con2__c.field-meta.xml
<CustomField>
    <fullName>con2__c</fullName>
    <label>Partner Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>