force-app/main/default/objects/Client_Acceptance_Form__c/fields/Confirm_Registered_Office_agreed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Registered_Office_agreed__c</fullName>
    <label>Confirm Registered Office agreed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>