force-app/main/default/objects/Client_Acceptance_Form__c/fields/Directors_and_intercompany_loans__c.field-meta.xml
<CustomField>
    <fullName>Directors_and_intercompany_loans__c</fullName>
    <label>(Directors and intercompany loans)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>