force-app/main/default/objects/Client_Acceptance_Form__c/fields/Do_the_above_give_any_causes__c.field-meta.xml
<CustomField>
    <fullName>Do_the_above_give_any_causes__c</fullName>
    <label>Do the above give any causes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>