force-app/main/default/objects/Client_Acceptance_Form__c/fields/Do_we_already_act_for_any_of_the_parties__c.field-meta.xml
<CustomField>
    <fullName>Do_we_already_act_for_any_of_the_parties__c</fullName>
    <label>Do we already act for any of the parties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>