force-app/main/default/objects/Client_Acceptance_Form__c/fields/Do_we_have_a_good_understanding__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_a_good_understanding__c</fullName>
    <label>Do we have a good understanding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>