force-app/main/default/objects/Client_Acceptance_Form__c/fields/Do_we_have_any_concerns_in_respect_of__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_any_concerns_in_respect_of__c</fullName>
    <label>Do we have any concerns in respect of</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>