force-app/main/default/objects/Client_Acceptance_Form__c/fields/Does_the_engagement_team__c.field-meta.xml
<CustomField>
    <fullName>Does_the_engagement_team__c</fullName>
    <label>Does the engagement team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>