force-app/main/default/objects/Client_Acceptance_Form__c/fields/Does_the_firm_receive_from_any__c.field-meta.xml
<CustomField>
    <fullName>Does_the_firm_receive_from_any__c</fullName>
    <label>Does the firm receive from any</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>