force-app/main/default/objects/Client_Acceptance_Form__c/fields/Does_the_transaction_relate_to__c.field-meta.xml
<CustomField>
    <fullName>Does_the_transaction_relate_to__c</fullName>
    <label>Does the transaction relate to</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>