force-app/main/default/objects/Client_Acceptance_Form__c/fields/Does_the_work_constitute_one__c.field-meta.xml
<CustomField>
    <fullName>Does_the_work_constitute_one__c</fullName>
    <label>Does the work constitute one</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>