force-app/main/default/objects/Client_Acceptance_Form__c/fields/Engagement_leader__c.field-meta.xml
<CustomField>
    <fullName>Engagement_leader__c</fullName>
    <label>Engagement leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>