force-app/main/default/objects/Client_Acceptance_Form__c/fields/Engagement_partner__c.field-meta.xml
<CustomField>
    <fullName>Engagement_partner__c</fullName>
    <label>Engagement partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>