force-app/main/default/objects/Client_Acceptance_Form__c/fields/Estimated_fee_as_a__c.field-meta.xml
<CustomField>
    <fullName>Estimated_fee_as_a__c</fullName>
    <label>Estimated fee as a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>