force-app/main/default/objects/Client_Acceptance_Form__c/fields/Fees_agreed_with_client__c.field-meta.xml
<CustomField>
    <fullName>Fees_agreed_with_client__c</fullName>
    <label>Fees agreed with client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>