force-app/main/default/objects/Client_Acceptance_Form__c/fields/Fees_to_be_charged__c.field-meta.xml
<CustomField>
    <fullName>Fees_to_be_charged__c</fullName>
    <label>Fees to be charged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>