force-app/main/default/objects/Client_Acceptance_Form__c/fields/Finance_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Department_Email__c</fullName>
    <label>Finance Department Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>