force-app/main/default/objects/Client_Acceptance_Form__c/fields/For_companies_trusts_and_partnerships__c.field-meta.xml
<CustomField>
    <fullName>For_companies_trusts_and_partnerships__c</fullName>
    <label>For companies, trusts and partnerships</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>