force-app/main/default/objects/Client_Acceptance_Form__c/fields/For_disposals_what_is_our_assessment__c.field-meta.xml
<CustomField>
    <fullName>For_disposals_what_is_our_assessment__c</fullName>
    <label>For disposals, what is our assessment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>