force-app/main/default/objects/Client_Acceptance_Form__c/fields/For_MBOs_and_fundraising__c.field-meta.xml
<CustomField>
    <fullName>For_MBOs_and_fundraising__c</fullName>
    <label>For MBO’s and fundraising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>