force-app/main/default/objects/Client_Acceptance_Form__c/fields/For_MBOs_what_is_the_value__c.field-meta.xml
<CustomField>
    <fullName>For_MBOs_what_is_the_value__c</fullName>
    <label>For MBO’s, what is the value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>