force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitLY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitLY__c</fullName>
    <label>GrossProfitLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>