force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitNY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitNY__c</fullName>
    <label>GrossProfitNY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>