force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitPLY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitPLY__c</fullName>
    <label>GrossProfit%LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>