force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitPNY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitPNY__c</fullName>
    <label>GrossProfit%NY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>