force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitPTY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitPTY__c</fullName>
    <label>GrossProfit%TY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>