force-app/main/default/objects/Client_Acceptance_Form__c/fields/GrossProfitTY__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitTY__c</fullName>
    <label>GrossProfitTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>