force-app/main/default/objects/Client_Acceptance_Form__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <label>Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>