force-app/main/default/objects/Client_Acceptance_Form__c/fields/Has_a_CP_team_member__c.field-meta.xml
<CustomField>
    <fullName>Has_a_CP_team_member__c</fullName>
    <label>Has a CP team member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>