force-app/main/default/objects/Client_Acceptance_Form__c/fields/Has_an_acceptance_meeting__c.field-meta.xml
<CustomField>
    <fullName>Has_an_acceptance_meeting__c</fullName>
    <label>Has an acceptance meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>