force-app/main/default/objects/Client_Acceptance_Form__c/fields/Has_the_current_adviser_been_advised_in__c.field-meta.xml
<CustomField>
    <fullName>Has_the_current_adviser_been_advised_in__c</fullName>
    <description>Has  the current adviser been advised in writing by the client that they may disclose information to us? (Yes / No)</description>
    <inlineHelpText>Has the current adviser been advised in writing by the client that they may disclose information to us? (Yes / No)</inlineHelpText>
    <label>Has the current adviser been advised in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>