force-app/main/default/objects/Client_Acceptance_Form__c/fields/Has_the_source_of_introduction_been_esta__c.field-meta.xml
<CustomField>
    <fullName>Has_the_source_of_introduction_been_esta__c</fullName>
    <description>Has the source of introduction been established</description>
    <label>Has the source of introduction been esta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>