force-app/main/default/objects/Client_Acceptance_Form__c/fields/Have_directors_declaration_forms__c.field-meta.xml
<CustomField>
    <fullName>Have_directors_declaration_forms__c</fullName>
    <label>Have directors’ declaration forms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>