force-app/main/default/objects/Client_Acceptance_Form__c/fields/Have_we_checked_for_any_director__c.field-meta.xml
<CustomField>
    <fullName>Have_we_checked_for_any_director__c</fullName>
    <label>Have we checked for any director</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>