force-app/main/default/objects/Client_Acceptance_Form__c/fields/Have_we_considered_our_ability_to_get__c.field-meta.xml
<CustomField>
    <fullName>Have_we_considered_our_ability_to_get__c</fullName>
    <label>Have we considered our ability to get</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>