force-app/main/default/objects/Client_Acceptance_Form__c/fields/Hire_purchase__c.field-meta.xml
<CustomField>
    <fullName>Hire_purchase__c</fullName>
    <label>(Hire purchase)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>