force-app/main/default/objects/Client_Acceptance_Form__c/fields/If_any_of_the_above_answers_are_yes__c.field-meta.xml
<CustomField>
    <fullName>If_any_of_the_above_answers_are_yes__c</fullName>
    <label>If any of the above answers are yes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>