force-app/main/default/objects/Client_Acceptance_Form__c/fields/If_No_please_confirm_action_to_be_taken__c.field-meta.xml
<CustomField>
    <fullName>If_No_please_confirm_action_to_be_taken__c</fullName>
    <description>If No, please confirm action to be taken</description>
    <label>If No, please confirm action to be taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>