force-app/main/default/objects/Client_Acceptance_Form__c/fields/If_no_you_must_treat_the__c.field-meta.xml
<CustomField>
    <fullName>If_no_you_must_treat_the__c</fullName>
    <label>If “no” you must treat the</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>