force-app/main/default/objects/Client_Acceptance_Form__c/fields/If_reduced_fee_please_state_the_reason__c.field-meta.xml
<CustomField>
    <fullName>If_reduced_fee_please_state_the_reason__c</fullName>
    <label>If reduced fee – please state the reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>