force-app/main/default/objects/Client_Acceptance_Form__c/fields/If_yes_you_must_treat_the_client__c.field-meta.xml
<CustomField>
    <fullName>If_yes_you_must_treat_the_client__c</fullName>
    <label>If “yes” you must treat the client</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>