force-app/main/default/objects/Client_Acceptance_Form__c/fields/In_relation_to_potential_minority__c.field-meta.xml
<CustomField>
    <fullName>In_relation_to_potential_minority__c</fullName>
    <label>In relation to potential minority</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>