force-app/main/default/objects/Client_Acceptance_Form__c/fields/Is_the_regulated_activity_incidental__c.field-meta.xml
<CustomField>
    <fullName>Is_the_regulated_activity_incidental__c</fullName>
    <label>Is the regulated activity incidental</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>