force-app/main/default/objects/Client_Acceptance_Form__c/fields/Is_the_work_within_any_of__c.field-meta.xml
<CustomField>
    <fullName>Is_the_work_within_any_of__c</fullName>
    <label>Is the work within any of</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>