force-app/main/default/objects/Client_Acceptance_Form__c/fields/Is_this_an_existing_client__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_existing_client__c</fullName>
    <label>Is this an existing client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>