force-app/main/default/objects/Client_Acceptance_Form__c/fields/iv1__c.field-meta.xml
<CustomField>
    <fullName>iv1__c</fullName>
    <label>Identification comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>