force-app/main/default/objects/Client_Acceptance_Form__c/fields/ivpick2__c.field-meta.xml
<CustomField>
    <fullName>ivpick2__c</fullName>
    <description>Does photo ID match the individual met?</description>
    <label>Does photo ID match the individual met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>