force-app/main/default/objects/Client_Acceptance_Form__c/fields/Key_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Address__c</fullName>
    <label>Key Client Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>