force-app/main/default/objects/Client_Acceptance_Form__c/fields/Key_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Email__c</fullName>
    <label>Key Client Email</label>
    <type>Email</type>
</CustomField>