force-app/main/default/objects/Client_Acceptance_Form__c/fields/Key_Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Phone__c</fullName>
    <label>Key Client Phone</label>
    <type>Phone</type>
</CustomField>