force-app/main/default/objects/Client_Acceptance_Form__c/fields/Key_Client_Role__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Role__c</fullName>
    <label>Key Client Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>