force-app/main/default/objects/Client_Acceptance_Form__c/fields/Lead_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Manager__c</fullName>
    <label>Lead Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>