force-app/main/default/objects/Client_Acceptance_Form__c/fields/Lifecycle_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Coordinator__c</fullName>
    <label>Lifecycle Coordinator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>