force-app/main/default/objects/Client_Acceptance_Form__c/fields/Link_their_name__c.field-meta.xml
<CustomField>
    <fullName>Link_their_name__c</fullName>
    <label>Link their name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>