force-app/main/default/objects/Client_Acceptance_Form__c/fields/List_any_related_businesses__c.field-meta.xml
<CustomField>
    <fullName>List_any_related_businesses__c</fullName>
    <label>List any related businesses</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>