force-app/main/default/objects/Client_Acceptance_Form__c/fields/List_client_contacts_name_and_position__c.field-meta.xml
<CustomField>
    <fullName>List_client_contacts_name_and_position__c</fullName>
    <label>List client contacts (name and position)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>