force-app/main/default/objects/Client_Acceptance_Form__c/fields/List_related_businesses_and_individuals__c.field-meta.xml
<CustomField>
    <fullName>List_related_businesses_and_individuals__c</fullName>
    <label>List related businesses and individuals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>