force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlra10__c.field-meta.xml
<CustomField>
    <fullName>mlra10__c</fullName>
    <description>Please name the individuals whom we met:</description>
    <label>Please name the individuals whom we met:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>