force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlra11__c.field-meta.xml
<CustomField>
    <fullName>mlra11__c</fullName>
    <description>Other comments :</description>
    <label>Other comments:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>